Update MiniWeb.java